# ECEN4223-Projects

./: .gitmodules  Discord_Token.env
install/: local_setup.sh  setup.sh
install/mecanum_drive_controller/include/mecanum_drive_controller/: mecanum_drive_controller_parameters.hpp
install/mecanum_drive_controller/share/mecanum_drive_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  mecanum_drive_plugin.xml  package.bash  package.dsv  package.ps1  package.sh
install/yahboom_rosmaster/share/yahboom_rosmaster/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml
install/yahboom_rosmaster_bringup/share/yahboom_rosmaster_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.zsh
install/yahboom_rosmaster_description/share/yahboom_rosmaster_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.zsh
install/yahboom_rosmaster_docking/lib/yahboom_rosmaster_docking/: detected_dock_pose_publisher
install/yahboom_rosmaster_docking/share/yahboom_rosmaster_docking/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh
install/yahboom_rosmaster_gazebo/share/yahboom_rosmaster_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.zsh
install/yahboom_rosmaster_localization/share/yahboom_rosmaster_localization/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.zsh
install/yahboom_rosmaster_msgs/share/yahboom_rosmaster_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh
install/yahboom_rosmaster_navigation/lib/yahboom_rosmaster_navigation/: assisted_teleoperation.py  cmd_vel_relay  nav_to_pose.py  test_nav_to_pose.py
install/yahboom_rosmaster_navigation/share/yahboom_rosmaster_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/yahboom_rosmaster_projects/lib/yahboom_rosmaster_projects/: ground_truth_extractor.py  openloop_control.py
install/yahboom_rosmaster_projects/share/yahboom_rosmaster_projects/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/yahboom_rosmaster_system_tests/lib/yahboom_rosmaster_system_tests/: mecanum_parameters_node  set_cleaning_state_service  square_mecanum_controller  timed_rotation_action_client  timed_rotation_action_server
install/yahboom_rosmaster_system_tests/share/yahboom_rosmaster_system_tests/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh
log/: latest_build
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/yahboom_rosmaster/: README.md
src/yahboom_rosmaster/discord_robot_bot/: bot.js  package-lock.json  package.json  test_bridge.js
src/yahboom_rosmaster/mecanum_drive_controller/: CMakeLists.txt  mecanum_drive_plugin.xml
src/yahboom_rosmaster/mecanum_drive_controller/include/mecanum_drive_controller/: mecanum_drive_controller.hpp  odometry.hpp  speed_limiter.hpp  visibility_control.h
src/yahboom_rosmaster/mecanum_drive_controller/src/: mecanum_drive_controller.cpp  mecanum_drive_controller_parameter.yaml  odometry.cpp  speed_limiter.cpp
src/yahboom_rosmaster/mecanum_drive_controller/test/: test_load_mecanum_drive_controller.cpp
src/yahboom_rosmaster/mecanum_drive_controller/test/config/: test_mecanum_drive_controller.yaml
src/yahboom_rosmaster/yahboom_rosmaster/: CMakeLists.txt  README.md  package.xml
src/yahboom_rosmaster/yahboom_rosmaster_bringup/: CMakeLists.txt
src/yahboom_rosmaster/yahboom_rosmaster_bringup/launch/: load_ros2_controllers.launch.py  rosmaster_x3_navigation.launch.py
src/yahboom_rosmaster/yahboom_rosmaster_bringup/scripts/: rosmaster_x3_gazebo.sh  rosmaster_x3_navigation.sh
src/yahboom_rosmaster/yahboom_rosmaster_description/: CMakeLists.txt  README.md
src/yahboom_rosmaster/yahboom_rosmaster_docking/: CMakeLists.txt
src/yahboom_rosmaster/yahboom_rosmaster_gazebo/: CMakeLists.txt  package.xml
src/yahboom_rosmaster/yahboom_rosmaster_localization/: CMakeLists.txt
src/yahboom_rosmaster/yahboom_rosmaster_msgs/: CMakeLists.txt
src/yahboom_rosmaster/yahboom_rosmaster_navigation/: CMakeLists.txt
src/yahboom_rosmaster/yahboom_rosmaster_navigation/config/: rosmaster_x3_nav2_default_params.yaml  rosmaster_x3_nav2_regulated_pure_pursuit_controller.yaml
src/yahboom_rosmaster/yahboom_rosmaster_navigation/maps/: cafe_world_map.pgm  cafe_world_map.yaml  house_world_map.pgm  house_world_map.yaml
src/yahboom_rosmaster/yahboom_rosmaster_navigation/rviz/: nav2_default_view.rviz
src/yahboom_rosmaster/yahboom_rosmaster_navigation/scripts/: assisted_teleoperation.py  nav_to_pose.py  test_nav_to_pose.py
src/yahboom_rosmaster/yahboom_rosmaster_navigation/src/: cmd_vel_relay_node.cpp
src/yahboom_rosmaster/yahboom_rosmaster_navigation/yahboom_rosmaster_navigation/: posestamped_msg_generator.py
src/yahboom_rosmaster/yahboom_rosmaster_projects/: CMakeLists.txt
src/yahboom_rosmaster/yahboom_rosmaster_projects/models/cafe_table/: model.sdf
src/yahboom_rosmaster/yahboom_rosmaster_projects/src/: openclaw_cmd.py  ppa.py
src/yahboom_rosmaster/yahboom_rosmaster_system_tests/: CMakeLists.txt
src/yahboom_rosmaster/yahboom_rosmaster_system_tests/config/: mecanum_parameters.yaml
src/yahboom_rosmaster/yahboom_rosmaster_system_tests/launch/: mecanum_parameters.launch.py
src/yahboom_rosmaster/yahboom_rosmaster_system_tests/src/: mecanum_parameters_node.cpp  set_cleaning_state_service.cpp  square_mecanum_controller.cpp  timed_rotation_action_client.cpp  timed_rotation_action_server.cpp
src/yahboom_rosmaster_projects3/yahboom_rosmaster_projects3/: ppa.py
(+871 files in other folders)
